Replaced my name with Joe Youn

--- a/Projects/HelloWorld/views/about.ejs
+++ b/Projects/HelloWorld/views/about.ejs
@@ -26,7 +26,7 @@
     </ul>
     
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 Joe Youn</p>
     </footer>
 </body>
 </html>
