--- a/Projects/HelloWorld/views/index.ejs
+++ b/Projects/HelloWorld/views/index.ejs
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %> | My Website</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <nav>
-        <a href="/">Home</a> | 
+        <a href="/">Home</a>
         <a href="/about">About</a>
     </nav>
     
-    <h1>Hello World - Now with Templates!</h1>
+    <h1>Hello World - Now with Style!</h1>
     <p><%= message %></p>
     
-    <p>This started as a simple Express app and now uses EJS templates!</p>
+    <p>This started as a simple Express app, added EJS templates, and now has professional CSS styling!</p>
     
     <footer>
         <p>&copy; 2025 Your Name</p>
