--- a/Projects/HelloWorld/views/about.ejs
+++ b/Projects/HelloWorld/views/about.ejs
@@ -9,6 +9,7 @@
     <nav>
         <a href="/">Home</a> | 
         <a href="/about">About</a>
+        <a href="/contact">Contact</a>
     </nav>
     
     <h1><%= title %></h1>
