i fixed the css

--- a/Projects/HelloWorld/views/index.ejs
+++ b/Projects/HelloWorld/views/index.ejs
@@ -1,17 +1,8 @@
 <%- include('partials/header') %>
 
-<h1><%= title %></h1>
+<h1>Hello World - Now with Partials!</h1>
 <p><%= message %></p>
 
-<h2>My Background</h2>
-<p>I'm a computer science student learning Express.js and web development.</p>
-
-<h2>Skills I'm Learning</h2>
-<ul>
-    <li>Node.js and Express</li>
-    <li>EJS Templates and Partials</li>
-    <li>HTML/CSS</li>
-    <li>JavaScript</li>
-</ul>
+<p>This website keeps getting better! Now we're using reusable template partials to avoid duplicating our header and footer code.</p>
 
 <%- include('partials/footer') %>
