--- a/Projects/HelloWorld/views/404.ejs
+++ b/Projects/HelloWorld/views/404.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/header') %>
+<link rel="stylesheet" href="/css/style.css">
 
 <div class="error-page">
     <h1>404 - Oops! Page Not Found</h1>
