i forgot to add resume to the header

--- a/Homework/Hw1/views/partials/header.ejs
+++ b/Homework/Hw1/views/partials/header.ejs
@@ -11,4 +11,5 @@
         <a href="/">Home</a>
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
+        <a href="/resume">Contact</a>
     </nav>
