finished the file link

--- a/projects/helloWorld/views/contact.ejs
+++ b/projects/helloWorld/views/contact.ejs
@@ -58,6 +58,6 @@
     </div>
 </div>
 
-<script src="/js/contact.js"></script>
+<script src="Projects/HelloWorld/public/css/js/contact.js"></script>
 
 <%- include('partials/footer') %>
