fixed the first error now it wont send for another reason

--- a/projects/helloWorld/views/contact.ejs
+++ b/projects/helloWorld/views/contact.ejs
@@ -14,8 +14,8 @@
         <p>Feel free to reach out if you want to connect or have any questions!</p>
         
         <div class="contact-details">
-            <p><strong>Email:</strong> your.email@example.com</p>
-            <p><strong>GitHub:</strong> <a href="#">github.com/yourusername</a></p>
+            <p><strong>Email:</strong> younj1@southernct.edu</p>
+            <p><strong>GitHub:</strong> <a href="#">github.com/younj1</a></p>
             <p><strong>LinkedIn:</strong> <a href="#">linkedin.com/in/yourname</a></p>
         </div>
         
@@ -58,6 +58,6 @@
     </div>
 </div>
 
-<script src="Projects/HelloWorld/public/css/js/contact.js"></script>
+<script src="/js/contact.js"></script>
 
 <%- include('partials/footer') %>
