--- a/REDOHw1Hw2Hw3/projects/helloWorld/views/partials/header.ejs
+++ b/REDOHw1Hw2Hw3/projects/helloWorld/views/partials/header.ejs
@@ -11,4 +11,5 @@
         <a href="/">Home</a>
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
+        <a href="/resume">Contact</a>
     </nav>
