--- a/REDOHw1Hw2Hw3/projects/helloWorld/views/resume.ejs
+++ b/REDOHw1Hw2Hw3/projects/helloWorld/views/resume.ejs
@@ -23,4 +23,11 @@
     <li>Beginner MySQL</li>
 </ul>
 
+<h2>Jobs</h2>
+<ul>
+    <li>Edible Arrangements</li>
+    <li>Smoothie King</li>
+    <li>Amazon</li>
+</ul>
+
 <%- include('partials/footer') %>
