added resume to the 404 handle

--- a/REDOHw1Hw2Hw3/projects/helloWorld/views/404.ejs
+++ b/REDOHw1Hw2Hw3/projects/helloWorld/views/404.ejs
@@ -9,6 +9,7 @@
         <li><a href="/">Home Page</a></li>
         <li><a href="/about">About Me</a></li>
         <li><a href="/contact">Contact Me</a></li>
+        <li><a href="/resume">My Resume</a></li>
     </ul>
 </div>
 
