--- a/REDOHw1Hw2Hw3/projects/helloWorld/views/contact.ejs
+++ b/REDOHw1Hw2Hw3/projects/helloWorld/views/contact.ejs
@@ -45,7 +45,7 @@
             </div>
 
             <div class="form-group">
-                <label for="[phone]">Phobe *</label>
+                <label for="[phone]">Phone *</label>
                 <input type="phone" id="phone" name="phone" value="<%= formData.phone || '' %>" required>
             </div>
             
